Implementacion de AMP con react

--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -123,3 +123,14 @@
 form {
     padding: 20px;
 }
+
+
+
+
+// section{
+//     background-attachment: fixed;
+//     width: 100%;
+//     overflow: hidden;
+//     background-size: cover;
+
+// }
