--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -94,6 +94,17 @@
 form {
   padding: 20px; }
 
+p {
+  margin-bottom: 30px;
+  display: block;
+  font-size: 25px; }
+
+section {
+  background-attachment: fixed;
+  width: 100%;
+  overflow: hidden;
+  background-size: cover; }
+
 .table {
   display: table; }
   .table > * {
