--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -125,12 +125,17 @@ form {
 }
 
 
+p{
+    margin-bottom: 30px;
+    display: block;
+    font-size: 25px;
+}
 
 
-// section{
-//     background-attachment: fixed;
-//     width: 100%;
-//     overflow: hidden;
-//     background-size: cover;
+section{
+    background-attachment: fixed;
+    width: 100%;
+    overflow: hidden;
+    background-size: cover;
 
-// }
+}
