Pruebas con parallax y deply en firebase

--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -94,17 +94,6 @@
 form {
   padding: 20px; }
 
-p {
-  margin-bottom: 30px;
-  display: block;
-  font-size: 25px; }
-
-section {
-  background-attachment: fixed;
-  width: 100%;
-  overflow: hidden;
-  background-size: cover; }
-
 .table {
   display: table; }
   .table > * {
@@ -516,6 +505,52 @@ section {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1; }
+
+.home-container {
+  position: relative;
+  transform: translateY(50vh);
+  width: 100%; }
+  .home-container p {
+    text-align: center;
+    padding: 0; }
+
+h1 {
+  text-align: center;
+  padding: 30px;
+  font-size: 50px;
+  z-index: 1;
+  color: white; }
+
+section {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  background-size: 30px 30px; }
+
+.parallax {
+  background: #292929 fixed no-repeat 0% 50%; }
+
+#section1 {
+  background: #292929 fixed no-repeat 50% 50%;
+  background-image: url("../../Assets/cv.jpg");
+  background-size: cover; }
+
+#section2 {
+  background-image: url("../../Assets/google.png");
+  background-size: 20%; }
+
+#section3 {
+  background-image: url("../../Assets/js.png");
+  background-size: 20%; }
+
+p {
+  padding: 30px 10%;
+  display: block;
+  font-size: 25px;
+  color: white;
+  text-align: justify;
+  padding-left: 30%; }
 
 .users .button-container {
   width: 100%;
