--- a/src/Styles/utilities.scss
+++ b/src/Styles/utilities.scss
@@ -502,3 +502,82 @@ $input-box-check-size: 20px;
     -ms-flex: 1;
     flex: 1;
 }
+
+
+
+
+
+.home-container{
+    position: relative;
+    transform: translateY(50vh);
+    width: 100%;
+    p{text-align: center; padding: 0;}
+}
+
+h1{
+    text-align: center;
+    padding: 30px;
+    font-size: 50px;
+    z-index: 1;
+    color: white
+}
+
+section{
+    width: 100%;
+    min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-size: 30px 30px;
+    
+}
+
+.parallax{
+    background: #292929 fixed no-repeat 0% 50%;
+    // background-size: 10%;
+    // background-size: cover;
+    // background-position-x: -50vh;
+}
+
+// #section1{
+//     background-color: red;
+// }
+// #section2{
+//     background-color: blue;
+// }
+// #section3{
+//     background-color: green;
+// }
+#section1{
+    background: #292929 fixed no-repeat 50% 50%;
+    background-image: url('../../Assets/cv.jpg');
+    background-size: cover;
+}
+#section2{
+    
+    background-image: url('../../Assets/google.png');
+    background-size: 20%;
+}
+#section3{
+    background-image: url('../../Assets/js.png');
+    background-size: 20%;
+}
+
+
+p{
+    padding: 30px 10%;
+    // padding-bottom: 30px;
+    display: block;
+    font-size: 25px;
+    color: white;
+    text-align: justify;
+    padding-left: 30%;
+}
+
+
+// section{
+//     background-attachment: fixed;
+//     width: 100%;
+//     overflow: hidden;
+//     background-size: cover;
+
+// }
