--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -12,3 +12,49 @@ $secondary-color-text: #ffffff;
     > * {display: table-cell;}
 }
 
+
+h1{
+    text-align: center;
+    padding: 30px;
+    font-size: 50px;
+    z-index: 1;
+    color: white
+}
+
+section{
+    width: 100%;
+    min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-size: 30px 30px;
+    
+}
+
+.parallax{
+    background: #292929 fixed no-repeat 0% 50%;
+}
+
+#section10{
+    background: #292929 fixed no-repeat 50% 50%;
+    background-image: url('../../Assets/cv.jpg');
+    background-size: cover;
+}
+#section20{
+    background-image: url('../../Assets/google.png');
+    background-size: 20%;
+}
+#section30{
+    background-image: url('../../Assets/js.png');
+    background-size: 20%;
+}
+
+
+p{
+    padding: 30px 10%;
+    display: block;
+    font-size: 25px;
+    color: blue;
+    text-align: justify;
+    padding-left: 30%;
+}
+
