--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: $secondary-color-dark;
+    color: $primary-color-text;
     text-decoration: none;
 }
 
@@ -123,3 +123,47 @@ form {
     padding: 20px;
 }
 
+.parallax {
+    background: #292929 fixed no-repeat 0% 50%;
+    background-size: cover;
+}
+
+#section10 {
+    background: #292929 fixed no-repeat 50% 50%;
+    background-image: url('../../Assets/cv.jpg');
+    background-size: cover;
+    width: 100%;
+    min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    // background-size: 30px 30px;
+}
+
+// #section20{
+//     background-image: url('../../Assets/code.jpg');
+//     background-size: 20%;
+// }
+// #section30{
+//     background-image: url('../../Assets/js.jpg');
+//     background-size: 20%;
+// }
+// [id*="section"] {
+//     background: $secondary-color-dark;
+//     min-height: 100vh;
+// }
+section {
+    background: $secondary-color-dark;
+    min-height: 100vh;
+    padding: 20px 10%;
+}
+
+body {
+    background: $secondary-color-dark;
+    font-size: 16px;
+    // color: white;
+    p {
+        padding: 30px 0;
+        font-size: 1em;        
+        text-align: justify;
+    }
+}
