--- a/src/Styles/Main/index.scss
+++ b/src/Styles/Main/index.scss
@@ -1,5 +1,6 @@
 @import "../base";
-@import "../app";
-@import "../utilities";
-@import "../users";
-@import "../comobox";
+// @import "../app";
+@import "../cv";
+// @import "../utilities";
+// @import "../users";
+// @import "../comobox";
