--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -3,7 +3,8 @@ $primary-color-light: #4f83cc;
 $primary-color-dark: #002f6c;
 $primary-color-text: #ffffff;
 $secondary-color: #263238;
-$secondary-color-light: #4f5b62;
+$grey-dark: #4f5b62;
+$secondary-color-light: #e2e2e2;
 $secondary-color-dark: #000a12;
 $secondary-color-text: #ffffff;
 
@@ -16,7 +17,9 @@ $secondary-color-text: #ffffff;
 // @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed');
 // @import url('https://fonts.googleapis.com/css?family=Meera+Inimai');
 // @import url('https://fonts.googleapis.com/css?family=PT+Serif');
-@import url('https://fonts.googleapis.com/css?family=Merriweather');
+// @import url('https://fonts.googleapis.com/css?family=Merriweather');
+// @import url('https://fonts.googleapis.com/css?family=Exo+2:600');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 
 body{
@@ -29,7 +32,9 @@ body{
     // font-family: 'IBM Plex Sans Condensed', sans-serif;
     // font-family: 'Meera Inimai', sans-serif;
     // font-family: 'PT Serif', serif;
-    font-family: 'Merriweather', serif;
+    // font-family: 'Merriweather', serif;
+    // font-family: 'Exo 2', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
@@ -39,13 +44,13 @@ body{
 }
 
 
-h1{
-    text-align: center;
-    padding: 30px;
-    font-size: 50px;
-    z-index: 1;
-    color: white
-}
+// h1{
+//     text-align: center;
+//     padding: 30px;
+//     font-size: 50px;
+//     z-index: 1;
+//     color: white
+// }
 
 
 
