--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -3,9 +3,11 @@ body {
   font-family: 'Montserrat', sans-serif; }
 
 .table {
-  display: table; }
+  display: table;
+  width: 100%; }
   .table > * {
-    display: table-cell; }
+    display: table-cell;
+    vertical-align: top; }
 
 * {
   margin: 0;
@@ -28,7 +30,7 @@ main {
     min-height: 100vh;
     display: inline-block; }
   main .aside-left-container {
-    background: #01579b;
+    background: #3aa7de;
     color: #ffffff;
     width: 30%;
     float: left; }
@@ -43,18 +45,42 @@ main {
         main .aside-left-container .img-profile-container .content-img h1 {
           font-size: 1.5em; }
   main .main-right-section {
-    background: #e2e2e2;
-    color: #4f5b62;
-    width: 70%; }
+    background: #e3e3e3;
+    color: #737373;
+    width: 70%;
+    padding: 3%; }
     main .main-right-section h1.name {
       text-align: left; }
     main .main-right-section section {
       background-color: #ffffff;
-      margin: 4%;
-      padding: 4%; }
+      margin: 6% 0;
+      padding: 6% 0 6% 6%; }
       main .main-right-section section [class^="icon-"] {
         display: inline-block;
         font-size: 2em; }
+      main .main-right-section section h2,
+      main .main-right-section section h3,
+      main .main-right-section section h4,
+      main .main-right-section section a {
+        line-height: 1.5em; }
       main .main-right-section section h2 {
         display: inline-block;
-        padding-left: 20px; }
+        line-height: 37px; }
+      main .main-right-section section h3,
+      main .main-right-section section a {
+        font-size: 1.1em;
+        color: #737373; }
+      main .main-right-section section h4 {
+        color: #6eb1e0;
+        font-size: 1em; }
+      main .main-right-section section article {
+        padding: 15px 0;
+        border-bottom: 1px solid #737373; }
+        main .main-right-section section article:last-of-type {
+          border-bottom: none; }
+      main .main-right-section section:first-of-type {
+        margin-top: 0; }
+      main .main-right-section section:last-of-type {
+        margin-bottom: 0; }
+    main .main-right-section .container-detail {
+      padding-left: 10px; }
