--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -1,10 +1,11 @@
 $primary-color: #01579b;
-$primary-color-light: #4f83cc;
+$primary-color-light: #3aa7de;
+$color-1e0: #6eb1e0;
 $primary-color-dark: #002f6c;
 $primary-color-text: #ffffff;
 $secondary-color: #263238;
-$grey-dark: #4f5b62;
-$secondary-color-light: #e2e2e2;
+$grey-dark: #737373;
+$secondary-color-light: #e3e3e3;
 $secondary-color-dark: #000a12;
 $secondary-color-text: #ffffff;
 
@@ -40,7 +41,8 @@ body{
 
 .table {
     display: table;
-    > * {display: table-cell;}
+    width: 100%;
+    > * {display: table-cell; vertical-align: top;}
 }
 
 
