Cambios en la estatica de los componentes y unificacionde ambos

--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -19,11 +19,12 @@ body {
   font-size: 16px; }
 
 main {
-  width: 21cm;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   min-height: 100vh;
   margin: 0 auto;
   padding: 3px; }
+  main.table {
+    width: 21cm; }
   main h1 {
     font-size: 2em; }
   main > * {
@@ -32,8 +33,7 @@ main {
   main .aside-left-container {
     background: #3aa7de;
     color: #ffffff;
-    width: 30%;
-    float: left; }
+    width: 30%; }
     main .aside-left-container h1.name {
       text-align: right; }
     main .aside-left-container .img-profile-container {
