--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -1,10 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    // color: $primary-color-text;
-    text-decoration: none;
-    // list-style-type: none;
+    box-sizing: border-box; // color: $primary-color-text;
+    text-decoration: none; // list-style-type: none;
 }
 
 // section {
@@ -14,8 +12,7 @@
 // }
 body {
     // background: $secondary-color-dark;
-    font-size: 16px;
-    // color: white;
+    font-size: 16px; // color: white;
     // p {
     //     padding: 30px 0;
     //     font-size: 1em;
@@ -24,14 +21,16 @@ body {
 }
 
 main {
-    width: 21cm;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    &.table {
+        width: 21cm;
+    }
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+    0 6px 6px rgba(0, 0, 0, 0.23);
     min-height: 100vh;
     margin: 0 auto;
     padding: 3px;
     h1 {
-        font-size: 2em;
-        // padding: 10px;
+        font-size: 2em; // padding: 10px;
     }
     &>* {
         min-height: 100vh;
@@ -41,7 +40,7 @@ main {
         background: $primary-color-light;
         color: $primary-color-text;
         width: 30%;
-        float: left;
+        // float: left;
         h1.name {
             text-align: right;
         }
@@ -55,8 +54,7 @@ main {
                     font-size: 1.5em;
                 }
             }
-        }
-        // .img-perfil{
+        } // .img-perfil{
         //    background: url('https://firebasestorage.googleapis.com/v0/b/test-74eeb.appspot.com/o/images%2Ffoto-cv.jpg?alt=media&token=2909595b-f623-4b24-a019-a488cbb06b25');
         // }
     }
@@ -64,8 +62,7 @@ main {
         background: $secondary-color-light;
         color: $grey-dark;
         width: 70%;
-        padding: 3%;
-        // padding: 4%;
+        padding: 3%; // padding: 4%;
         h1.name {
             text-align: left;
         }
@@ -103,11 +100,11 @@ main {
                     border-bottom: none;
                 }
             }
-            &:first-of-type{
-                margin-top: 0; 
+            &:first-of-type {
+                margin-top: 0;
             }
-            &:last-of-type{
-                margin-bottom: 0; 
+            &:last-of-type {
+                margin-bottom: 0;
             }
         }
         .container-detail {
