--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -1,5 +1,6 @@
 $primary-color: #01579b;
 $primary-color-light: #3aa7de;
+$color-aca: #398aca;
 $color-1e0: #6eb1e0;
 $primary-color-dark: #002f6c;
 $primary-color-text: #ffffff;
