--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -34,7 +34,8 @@ main {
   main .aside-left-container {
     background: #3aa7de;
     color: #ffffff;
-    width: 30%; }
+    width: 30%;
+    box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23); }
     main .aside-left-container h1.name {
       text-align: right; }
     main .aside-left-container .img-profile-container {
@@ -69,7 +70,8 @@ main {
     main .main-right-section section {
       background-color: #ffffff;
       margin: 6% 0;
-      padding: 6% 0 6% 6%; }
+      padding: 6% 0 6% 6%;
+      box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23); }
       main .main-right-section section [class^="icon-"] {
         display: inline-block;
         font-size: 2em; }
