--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -41,6 +41,7 @@ main {
         background: $primary-color-light;
         color: $primary-color-text;
         width: 30%;
+        box-shadow: 0 1px 11px rgba(0,0,0,0.19), 0 2px 8px rgba(0,0,0,0.23);
         // float: left;
         h1.name {
             text-align: right;
@@ -91,6 +92,7 @@ main {
             background-color: $primary-color-text;
             margin: 6% 0;
             padding: 6% 0 6% 6%;
+            box-shadow: 0 1px 11px rgba(0,0,0,0.19), 0 2px 8px rgba(0,0,0,0.23);
             [class^="icon-"] {
                 display: inline-block;
                 font-size: 2em;
