--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -10,6 +10,15 @@ $secondary-color-light: #e3e3e3;
 $secondary-color-dark: #000a12;
 $secondary-color-text: #ffffff;
 
+$color-919 : #191919;
+
+
+
+
+
+
+
+
 // @import url('https://fonts.googleapis.com/css?family=Mina');
 // @import url('https://fonts.googleapis.com/css?family=Raleway');
 // @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
