--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -27,6 +27,9 @@ main {
     .icon-them {
         position: fixed;
         z-index: 1;
+        &:hover{
+            cursor: pointer;
+        }
     }
     &.dark-them {
         .aside-left-container {
