--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -52,6 +52,8 @@ body {
     color: #ffffff;
     width: 30%;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23); }
+    .app-container main .aside-left-container > section {
+      padding: 0 0 8% 8%; }
     .app-container main .aside-left-container h1.name {
       text-align: right; }
     .app-container main .aside-left-container .img-profile-container {
@@ -67,7 +69,7 @@ body {
           font-size: 0.8em; }
     .app-container main .aside-left-container .container-detail-personal-data {
       color: #ffffff;
-      padding: 0 0 8% 8%; }
+      padding-bottom: 8%; }
       .app-container main .aside-left-container .container-detail-personal-data p {
         font-size: 0.7em; }
       .app-container main .aside-left-container .container-detail-personal-data > div {
@@ -156,7 +158,5 @@ body {
       .app-container main.table > * {
         display: block;
         width: 100%; }
-    .app-container .aside-left-container .container-detail-personal-data {
-      padding: 0 0 4% 4%; }
-      .app-container .aside-left-container .container-detail-personal-data > div {
-        padding: 0 4% 4% 0; } }
+    .app-container .aside-left-container .container-detail-personal-data .container-detail {
+      width: 90%; } }
