--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -68,7 +68,12 @@ body {
             background: $primary-color;
             color: $primary-color-text;
             width: 30%;
-            box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23); // float: left;
+            box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23);
+            
+            &>section{
+                padding: 0 0 8% 8%;
+            }
+
             h1.name {
                 text-align: right;
             }
@@ -89,7 +94,7 @@ body {
             }
             .container-detail-personal-data {
                 color: $primary-color-text;
-                padding: 0 0 8% 8%;
+                padding-bottom: 8%;
                 p {
                     font-size: 0.7em;
                 }
@@ -211,10 +216,11 @@ body {
             }
         }
         .aside-left-container {
+            
             .container-detail-personal-data {
-                padding: 0 0 4% 4%;
-                &>div {
-                    padding: 0 4% 4% 0
+                // padding: 0 0 4% 4%;
+                .container-detail{
+                    width: 90%;
                 }
             }
         }
