--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -27,14 +27,12 @@ body {
     min-height: 100vh;
     margin: 0 auto;
     padding: 3px;
-    max-width: 21cm;
-    // height: 100vh;
+    max-width: 21cm; // height: 100vh;
     h1 {
         font-size: 1.5em; // padding: 10px;
     }
     &>* {
-        min-height: 100vh;
-        // display: inline-block;
+        min-height: 100vh; // display: inline-block;
     }
     main {
         .icon-them {
@@ -51,6 +49,10 @@ body {
             .main-right-section {
                 color: $primary-color-text;
                 background: #424242;
+                &>i {
+                    position: absolute;
+                    right: 5%;
+                }
                 section {
                     background-color: $color-919;
                     a,
@@ -69,11 +71,9 @@ body {
             color: $primary-color-text;
             width: 30%;
             box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23);
-            
-            &>section{
+            &>section {
                 padding: 0 0 8% 8%;
             }
-
             h1.name {
                 text-align: right;
             }
@@ -122,6 +122,11 @@ body {
             color: $grey-dark;
             width: 70%;
             padding: 3%; // padding: 4%;
+            position: relative;
+            &>i{
+                position: absolute;
+                right: 5%;
+            }
             h1.name {
                 text-align: left;
             }
@@ -216,10 +221,9 @@ body {
             }
         }
         .aside-left-container {
-            
             .container-detail-personal-data {
                 // padding: 0 0 4% 4%;
-                .container-detail{
+                .container-detail {
                     width: 90%;
                 }
             }
